[package]
name = "memoreal_nft_project"
version = "0.1.0"
description = "Memoreal NFT 프로젝트"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memoreal_nft_project"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = ["token"] }
spl-token = { version = "4.0.0", default-features = false }
mpl-token-metadata = "4.1.2"

[dev-dependencies]
solana-sdk = "1.17"
